<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/img_tokopedia"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:src="@drawable/logotokopedia"
        android:importantForAccessibility="no"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/welkam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:layout_below="@id/img_tokopedia"
        android:layout_marginTop="15dp"
        android:textSize="21sp"
        android:textStyle="bold"
        android:fontFamily="@font/mmedium" />

    <TextView
        android:id="@+id/enjoy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name1"
        android:textAlignment="center"
        android:layout_below="@+id/welkam"
        android:layout_marginTop="3dp"
        android:textSize="20sp"
        android:fontFamily="@font/mmedium"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/img_tokopedia1"
        android:layout_below="@id/enjoy"
        android:layout_width="500dp"
        android:layout_height="180dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/tokopedia" />

    <TextView
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:fontFamily="@font/mblack"
        android:text="@string/sign_up"
        android:layout_below="@id/img_tokopedia1"
        android:layout_marginTop="10dp"
        android:textSize="23sp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="17dp"
        android:layout_marginBottom="20dp"
        android:hint="Username"
        android:textSize="17dp"
        android:drawableStart="@drawable/baseline_person_outline_24"
        android:drawablePadding="15dp"/>


    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="20dp"
        android:hint="Password"
        android:textSize="17dp"
        android:drawableStart="@drawable/baseline_lock_24"
        android:drawablePadding="15dp"/>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="22dp"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/mediumseagreen"
        android:text="@string/Login"
        android:textColor="@color/white"
        android:fontFamily="@font/mblack" />

    <TextView
        android:id="@+id/lainlain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-9dp"
        android:fontFamily="@font/mmedium"
        android:text="@string/masuklain"
        android:textColor="@color/material_dynamic_neutral60"
        android:textSize="13dp" />

    <ImageView
        android:id="@+id/google"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_below="@id/lainlain"
        android:layout_marginTop="10dp"
        android:src="@drawable/google"
        android:layout_marginRight="30dp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="21dp"
        android:layout_below="@id/lainlain"
        android:layout_marginTop="10dp"
        android:src="@drawable/facebook"
        android:layout_marginLeft="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/daftar"
        android:fontFamily="@font/mmedium"
        android:layout_below="@id/google"
        android:layout_marginTop="17dp"
        android:textColor="@color/material_dynamic_neutral_variant60"
        android:textSize="12dp"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="80dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/daftar2"
        android:layout_below="@id/google"
        android:layout_marginTop="17dp"
        android:fontFamily="@font/mblack"
        android:textSize="11dp"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="80dp"
        android:textColor="@color/mediumseagreen"/>

</RelativeLayout>